--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "https": "^1.0.0",
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "nookies": "^2.5.2",
+    "puppeteer": "^19.8.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "typescript": "5.0.2"
   },
