--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "debrid-torrent-manager",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "browser": "browsers install"
-  },
-  "dependencies": {
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.29",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "https": "^1.0.0",
-    "js-cookie": "^3.0.1",
-    "next": "13.2.4",
-    "nookies": "^2.5.2",
-    "puppeteer": "^19.8.2",
-    "puppeteer-core": "^19.8.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "qs": "^6.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.8.0",
-    "typescript": "5.0.2"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.3",
-    "@types/qs": "^6.9.7",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "debrid-torrent-manager",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
+	},
+	"dependencies": {
+		"@types/node": "18.15.10",
+		"@types/react": "18.0.29",
+		"@types/react-dom": "18.0.11",
+		"axios": "^1.3.4",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"https": "^1.0.0",
+		"js-cookie": "^3.0.1",
+		"next": "13.2.4",
+		"nookies": "^2.5.2",
+		"puppeteer": "^19.8.2",
+		"puppeteer-core": "^19.8.1",
+		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
+		"qs": "^6.11.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.4.0",
+		"react-icons": "^4.8.0",
+		"typescript": "5.0.2"
+	},
+	"devDependencies": {
+		"@types/js-cookie": "^3.0.3",
+		"@types/qs": "^6.9.7",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.7",
+		"tailwindcss": "^3.2.7"
+	}
 }
