--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "ENV=development node server.js",
 		"build": "next build",
-		"start": "next start",
+		"start": "node server.js",
 		"lint": "next lint",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
 	},
@@ -16,6 +16,7 @@
 		"axios": "^1.3.4",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
+		"express": "^4.18.2",
 		"https": "^1.0.0",
 		"js-cookie": "^3.0.1",
 		"next": "13.2.4",
