--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "ENV=development node server.js",
 		"build": "next build",
-		"start": "node server.js",
+		"start": "ENV=production node server.js",
 		"lint": "next lint",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
 	},
@@ -17,10 +17,7 @@
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"express": "^4.18.2",
-		"https": "^1.0.0",
-		"js-cookie": "^3.0.1",
 		"next": "13.2.4",
-		"nookies": "^2.5.2",
 		"puppeteer": "^19.8.2",
 		"puppeteer-core": "^19.8.1",
 		"puppeteer-extra": "^3.3.6",
@@ -33,7 +30,6 @@
 		"typescript": "5.0.2"
 	},
 	"devDependencies": {
-		"@types/js-cookie": "^3.0.3",
 		"@types/qs": "^6.9.7",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
