--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
+		"prettier-plugin-organize-imports": "^3.2.2",
+		"prettier-plugin-sort-json": "^1.0.0",
 		"tailwindcss": "^3.2.7"
 	}
 }
