--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
 	},
 	"dependencies": {
+		"@ctrl/video-filename-parser": "^4.12.0",
 		"@types/node": "18.15.10",
 		"@types/react": "18.0.29",
 		"@types/react-dom": "18.0.11",
@@ -19,7 +20,6 @@
 		"express": "^4.18.2",
 		"next": "13.2.4",
 		"puppeteer": "^19.8.2",
-		"puppeteer-core": "^19.8.1",
 		"puppeteer-extra": "^3.3.6",
 		"puppeteer-extra-plugin-stealth": "^2.11.2",
 		"qs": "^6.11.1",
