--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@types/node": "18.15.10",
 		"@types/react": "18.0.29",
 		"@types/react-dom": "18.0.11",
+		"@types/uuid": "^9.0.1",
 		"axios": "^1.3.4",
+		"better-sqlite3": "^8.2.0",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
 		"express": "^4.18.2",
@@ -27,7 +29,8 @@
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.4.0",
 		"react-icons": "^4.8.0",
-		"typescript": "5.0.2"
+		"typescript": "5.0.2",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/qs": "^6.9.7",
