--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-	"name": "debrid-media-manager",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "ENV=development node server.js",
-		"build": "next build",
-		"start": "ENV=production node server.js",
-		"lint": "next lint",
-		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
-	},
-	"dependencies": {
-		"@ctrl/video-filename-parser": "^4.12.0",
-		"@types/node": "18.15.10",
-		"@types/react": "18.0.29",
-		"@types/react-dom": "18.0.11",
-		"@types/uuid": "^9.0.1",
-		"axios": "^1.3.4",
-		"better-sqlite3": "^8.2.0",
-		"eslint": "8.36.0",
-		"eslint-config-next": "13.2.4",
-		"express": "^4.18.2",
-		"next": "13.2.4",
-		"puppeteer": "^19.8.2",
-		"puppeteer-extra": "^3.3.6",
-		"puppeteer-extra-plugin-stealth": "^2.11.2",
-		"qs": "^6.11.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-hot-toast": "^2.4.0",
-		"react-icons": "^4.8.0",
-		"typescript": "5.0.2",
-		"uuid": "^9.0.0"
-	},
-	"devDependencies": {
-		"@types/qs": "^6.9.7",
-		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.7",
-		"prettier-plugin-organize-imports": "^3.2.2",
-		"prettier-plugin-sort-json": "^1.0.0",
-		"tailwindcss": "^3.2.7"
-	}
+   "name": "debrid-media-manager",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "ENV=development node server.js",
+      "build": "next build",
+      "start": "ts-node src/index.ts",
+      "lint": "next lint",
+      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "@ctrl/video-filename-parser": "^4.12.0",
+      "@types/node": "18.15.10",
+      "@types/react": "18.0.29",
+      "@types/react-dom": "18.0.11",
+      "@types/uuid": "^9.0.1",
+      "axios": "^1.3.4",
+      "eslint": "8.36.0",
+      "eslint-config-next": "13.2.4",
+      "express": "^4.18.2",
+      "next": "13.2.4",
+      "puppeteer": "^19.8.2",
+      "puppeteer-extra": "^3.3.6",
+      "puppeteer-extra-plugin-stealth": "^2.11.2",
+      "qs": "^6.11.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-hot-toast": "^2.4.0",
+      "react-icons": "^4.8.0",
+      "reflect-metadata": "^0.1.13",
+      "sqlite3": "^5.0.2",
+      "typeorm": "0.3.12",
+      "typescript": "5.0.2",
+      "uuid": "^9.0.0"
+   },
+   "devDependencies": {
+      "@types/qs": "^6.9.7",
+      "autoprefixer": "^10.4.14",
+      "postcss": "^8.4.21",
+      "prettier": "^2.8.7",
+      "prettier-plugin-organize-imports": "^3.2.2",
+      "prettier-plugin-sort-json": "^1.0.0",
+      "tailwindcss": "^3.2.7",
+      "ts-node": "10.7.0",
+      "@types/node": "^16.11.10",
+      "typescript": "4.5.2"
+   }
 }
