--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@types/react-dom": "18.0.11",
       "@types/uuid": "^9.0.1",
       "axios": "^1.3.4",
+      "dotenv": "^16.0.3",
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "express": "^4.18.2",
@@ -36,6 +37,7 @@
       "uuid": "^9.0.0"
    },
    "devDependencies": {
+      "@types/node": "^16.11.10",
       "@types/qs": "^6.9.7",
       "autoprefixer": "^10.4.14",
       "postcss": "^8.4.21",
@@ -44,7 +46,6 @@
       "prettier-plugin-sort-json": "^1.0.0",
       "tailwindcss": "^3.2.7",
       "ts-node": "10.7.0",
-      "@types/node": "^16.11.10",
       "typescript": "4.5.2"
    }
 }
