--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "@types/react": "18.0.29",
       "@types/react-dom": "18.0.11",
       "@types/uuid": "^9.0.1",
-      "axios": "^1.3.4",
+      "axios": "^1.3.5",
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "express": "^4.18.2",
@@ -30,6 +30,7 @@
       "react-hot-toast": "^2.4.0",
       "react-icons": "^4.8.0",
       "reflect-metadata": "^0.1.13",
+      "socks-proxy-agent": "^7.0.0",
       "sqlite3": "^5.0.2",
       "typeorm": "0.3.12",
       "typescript": "5.0.2",
