--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
    "version": "0.1.0",
    "private": true,
    "scripts": {
-      "dev": "ENV=development node server.js",
+      "dev": "next dev",
       "build": "next build",
-      "start": "ENV=production node server.js",
+      "start": "next start",
       "lint": "next lint",
       "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
       "typeorm": "typeorm-ts-node-commonjs"
@@ -20,6 +20,7 @@
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "express": "^4.18.2",
+      "lz-string": "^1.5.0",
       "next": "13.2.4",
       "puppeteer": "^19.8.2",
       "puppeteer-extra": "^3.3.6",
