--- a/package.json
+++ b/package.json
@@ -7,35 +7,26 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
-      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
       "@types/node": "18.15.10",
       "@types/react": "18.0.29",
       "@types/react-dom": "18.0.11",
-      "@types/uuid": "^9.0.1",
       "axios": "^1.3.5",
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "express": "^4.18.2",
       "lz-string": "^1.5.0",
       "next": "13.2.4",
-      "puppeteer": "^19.8.2",
-      "puppeteer-extra": "^3.3.6",
-      "puppeteer-extra-plugin-stealth": "^2.11.2",
       "qs": "^6.11.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
       "react-hot-toast": "^2.4.0",
       "react-icons": "^4.8.0",
-      "reflect-metadata": "^0.1.13",
       "socks-proxy-agent": "^7.0.0",
-      "sqlite3": "^5.0.2",
-      "typeorm": "0.3.12",
-      "typescript": "5.0.2",
-      "uuid": "^9.0.0"
+      "typescript": "5.0.2"
    },
    "devDependencies": {
       "@types/node": "^16.11.10",
