no more localhost

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "scripts": {
       "dev": "next dev",
       "build": "next build",
-      "start": "next start -H localhost",
+      "start": "next start",
       "lint": "next lint",
       "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
    },
