--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
+      "@octokit/rest": "^19.0.7",
       "@types/node": "18.15.10",
       "@types/react": "18.0.29",
       "@types/react-dom": "18.0.11",
+      "@types/uuid": "^9.0.1",
       "axios": "^1.3.5",
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
@@ -27,7 +29,8 @@
       "react-icons": "^4.8.0",
       "redis": "^4.6.5",
       "socks-proxy-agent": "^7.0.0",
-      "typescript": "5.0.2"
+      "typescript": "5.0.2",
+      "uuid": "^9.0.0"
    },
    "devDependencies": {
       "@types/node": "^16.11.10",
