--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "debrid-media-manager",
-   "version": "0.1.0",
-   "private": true,
+   "version": "1.0.0",
+   "private": false,
    "scripts": {
       "dev": "next dev",
       "build": "next build",
