update image after push

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -37,3 +37,11 @@ jobs:
           tags: |
             debridmediamanager/debrid-media-manager:latest
             debridmediamanager/debrid-media-manager:${{ env.version }}
+      - name: Deploy to Swarm
+        uses: docker/cli@v1
+        with:
+          args: service update --image debridmediamanager/debrid-media-manager:${{ env.version }} dmm_web
+        env:
+          DOCKER_HOST: tcp://${{ secrets.SWARM_MANAGER_URL }}
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
