--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,60 @@ version: '3.9'
 services:
   tor:
     image: dockage/tor-privoxy:latest
-    restart: always
     deploy:
       replicas: 8
+
   web:
     image: debridmediamanager/debrid-media-manager:latest
     ports:
       - 3000:3000
     environment:
       - NODE_ENV=production
-      - REDIS_URL=redis://172.17.0.1:6379
+      - REDIS_URL=redis://redis:6379
       - GH_PAT=your_github_personal_access_token
-    restart: always
     deploy:
       replicas: 8
+      restart_policy:
+        condition: on-failure
+
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - REDIS_REPLICATION_MODE=master
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - redis_data:/bitnami/redis/data
+    deploy:
+      replicas: 1
+
+  redis-slave:
+    image: 'bitnami/redis:latest'
+    environment:
+      - REDIS_REPLICATION_MODE=slave
+      - REDIS_MASTER_HOST=redis
+      - ALLOW_EMPTY_PASSWORD=yes
+    depends_on:
+      - redis
+    volumes:
+      - redis_data:/bitnami/redis/data
+    deploy:
+      replicas: 3
+
+  redis-sentinel:
+    image: 'bitnami/redis-sentinel:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_SENTINEL_CONF=/usr/local/etc/redis-sentinel.conf
+    depends_on:
+      - redis
+      - redis-slave
+    ports:
+      - '26379-26381:26379'
+    volumes:
+      - ./redis-sentinel.conf:/usr/local/etc/redis-sentinel.conf
+    deploy:
+      replicas: 3
+
+volumes:
+  redis_data:
+    external: true
