Add reinsert function

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+NODE_ENV=production
 GH_PAT=github-access-token
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:16379
+PROXY=socks5h://tor:9050
