refer to env file to override defaults

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 3000:3000
     env_file:
       - .env
+      - .env.local
     deploy:
       replicas: 8
       restart_policy:
