add slow search api

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=production
 GH_PAT=github-access-token
 REDIS_URL=redis://redis:6379
+REDIS_SLAVE_URL=redis://redis-slave:6379
 PROXY=socks5h://tor:9050
