--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
 version: '3.9'
 services:
+  debugger:
+    image: ubuntu
+    volumes:
+      - redis_data:/userdata
+    entrypoint: ['tail', '-f', '/dev/null']
+    deploy:
+      replicas: 1
+
   tor:
     image: dockage/tor-privoxy:latest
     deploy:
-      replicas: 100
+      replicas: 64
 
   web:
     image: debridmediamanager/debrid-media-manager:latest
     ports:
-      - 3000:3000
+      - 127.0.0.1:3000:3000
     env_file:
       - .env
       - .env.local
     deploy:
-      replicas: 25
+      replicas: 8
       restart_policy:
         condition: on-failure
 
@@ -24,6 +32,8 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - redis_data:/bitnami/redis/data
+    ports:
+      - 127.0.0.1:6379:6379
     deploy:
       replicas: 1
 
@@ -49,7 +59,7 @@ services:
       - redis
       - redis-slave
     ports:
-      - '26379-26381:26379'
+      - '127.0.0.1:26379-26381:26379'
     volumes:
       - ./redis-sentinel.conf:/usr/local/etc/redis-sentinel.conf
     deploy:
