highly available redis setup

--- a/redis-sentinel.conf
+++ b/redis-sentinel.conf
@@ -1,4 +1,5 @@
-sentinel monitor mymaster redis 6379 2
-sentinel down-after-milliseconds mymaster 5000
-sentinel failover-timeout mymaster 60000
-sentinel parallel-syncs mymaster 1
+sentinel monitor dmmmaster redis-master 6379 2
+sentinel down-after-milliseconds dmmmaster 5000
+sentinel failover-timeout dmmmaster 60000
+sentinel parallel-syncs dmmmaster 1
+sentinel auth-pass dmmmaster dmm123456
