--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,10 +9,6 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -45,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platform: ${{ matrix.platform }}
+          platform: linux/amd64
           push: true
           tags: |
             debridmediamanager/debrid-media-manager:latest
