--- a/redis-sentinel.conf
+++ b/redis-sentinel.conf
@@ -1,5 +1,5 @@
-sentinel monitor dmmmaster redis-master 6379 2
-sentinel down-after-milliseconds dmmmaster 5000
-sentinel failover-timeout dmmmaster 60000
-sentinel parallel-syncs dmmmaster 1
-sentinel auth-pass dmmmaster dmm123456
+sentinel monitor dmm-master redis-master 6379 2
+sentinel down-after-milliseconds dmm-master 5000
+sentinel failover-timeout dmm-master 60000
+sentinel parallel-syncs dmm-master 1
+sentinel auth-pass dmm-master dmm123456
