cluster name update

--- a/redis-sentinel.conf
+++ b/redis-sentinel.conf
@@ -1,5 +1,5 @@
-sentinel monitor dmm-master redis-master 6379 2
-sentinel down-after-milliseconds dmm-master 5000
-sentinel failover-timeout dmm-master 60000
-sentinel parallel-syncs dmm-master 1
-sentinel auth-pass dmm-master dmm123456
+sentinel monitor mymaster redis-master 6379 2
+sentinel down-after-milliseconds mymaster 5000
+sentinel failover-timeout mymaster 60000
+sentinel parallel-syncs mymaster 1
+sentinel auth-pass mymaster dmm123456
