--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       replicas: 1
 
   web:
-    image: debridmediamanager/debrid-media-manager:latest
+    image: debridmediamanager/debrid-media-manager:arm64-7
     ports:
       - 3000:3000
     env_file:
