add search speed

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 GH_PAT=github-access-token
 PROXY=socks5h://tor:9050
+SEARCH_SPEED_PASSWORD=123456
 
 REDIS_SENTINEL_HOST=redis-sentinel
 REDIS_PASSWORD=dmm123456
