--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -13,11 +13,11 @@ jobs:
     - name: Check for version update in package.json
       id: check-version
       run: |
-        changed_files=$(git diff --name-only main)
+        changed_files=$(git diff --name-only origin/main)
         if echo "$changed_files" | grep --quiet 'package.json'; then
           # Extract the version field value using jq
           version=$(jq -r '.version' package.json)
-          if [[ "$version" != "$(git show main:package.json | jq -r '.version')" ]]; then
+          if [[ "$version" != "$(git show origin/main:package.json | jq -r '.version')" ]]; then
             echo "::set-output name=changed::true"
           else
             echo "::set-output name=changed::false"
