fetch-depth to 9

--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Check for version update in package.json
       id: check-version
       run: |
