--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
+      "@google-cloud/firestore": "^6.7.0",
       "@octokit/rest": "^19.0.7",
       "@types/ioredis": "^5.0.0",
       "@types/node": "18.15.10",
