--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
-      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
+      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
+      "postinstall": "prisma generate"
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
       "@google-cloud/firestore": "^6.7.0",
       "@octokit/rest": "^19.0.7",
+      "@prisma/client": "^5.2.0",
       "@types/ioredis": "^5.0.0",
       "@types/node": "18.15.10",
       "@types/react": "18.0.29",
@@ -42,6 +44,7 @@
       "prettier": "^2.8.7",
       "prettier-plugin-organize-imports": "^3.2.2",
       "prettier-plugin-sort-json": "^1.0.0",
+      "prisma": "^5.2.0",
       "tailwindcss": "^3.2.7",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
