--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
       "react-hot-toast": "^2.4.0",
       "react-icons": "^4.8.0",
       "socks-proxy-agent": "^7.0.0",
-      "typescript": "5.0.2",
       "uuid": "^9.0.0"
    },
    "devDependencies": {
@@ -47,6 +46,6 @@
       "prisma": "^5.2.0",
       "tailwindcss": "^3.2.7",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+      "typescript": "^5.2.2"
    }
 }
