--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "express": "^4.18.2",
       "ioredis": "^5.3.2",
       "lz-string": "^1.5.0",
-      "next": "13.2.4",
+      "next": "^13.4.19",
       "qs": "^6.11.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
