Ignore extra dir when building

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
 		"sourceMap": true
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "prod_node_modules"]
 }
