--- a/.github/workflows/build-tor.yml
+++ b/.github/workflows/build-tor.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'tor.Dockerfile'
 
 jobs:
   tor-build-and-push:
@@ -13,22 +15,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Read version from package.json
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         id: build-image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: tor.Dockerfile
-          platform: linux/amd64
           push: true
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
             debridmediamanager/tor:latest
+            debridmediamanager/tor:${{ env.version }}
