--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ SCRAPE_API_PASSWORD=123456
 TMDB_KEY=abc123
 MDBLIST_KEY=abc123
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict
