--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "debrid-media-manager",
-   "version": "3.2.0",
+   "version": "3.3.0",
    "private": false,
    "scripts": {
       "dev": "next dev",
@@ -15,6 +15,7 @@
       "@google-cloud/firestore": "^6.7.0",
       "@octokit/rest": "^19.0.7",
       "@prisma/client": "^5.2.0",
+      "@types/file-saver": "^2.0.5",
       "@types/ioredis": "^5.0.0",
       "@types/node": "18.15.10",
       "@types/react": "18.0.29",
@@ -24,6 +25,7 @@
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "express": "^4.18.2",
+      "file-saver": "^2.0.5",
       "ioredis": "^5.3.2",
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
