--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REQUEST_TIMEOUT=5000
 GH_PAT=github-access-token
-PROXY=socks5h://tor:9050
+PROXY=tor:9050
 SCRAPE_API_PASSWORD=123456
 
 TMDB_KEY=abc123
