Add proxy manager

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ TMDB_KEY=abc123
 MDBLIST_KEY=abc123
 
 DATABASE_URL=mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict
+JACKETT=http://localhost:9117
