--- a/package.json
+++ b/package.json
@@ -12,18 +12,12 @@
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
-      "@google-cloud/firestore": "^6.7.0",
       "@octokit/rest": "^19.0.7",
+      "@pnpm/crypto.base32-hash": "^2.0.0",
       "@prisma/client": "^5.2.0",
-      "@types/file-saver": "^2.0.5",
-      "@types/ioredis": "^5.0.0",
-      "@types/node": "18.15.10",
-      "@types/react": "18.0.29",
-      "@types/react-dom": "18.0.11",
-      "@types/uuid": "^9.0.1",
       "axios": "^1.3.5",
-      "eslint": "8.36.0",
-      "eslint-config-next": "13.2.4",
+      "base32-encode": "^2.0.0",
+      "bencode": "^4.0.0",
       "express": "^4.18.2",
       "file-saver": "^2.0.5",
       "ioredis": "^5.3.2",
@@ -40,10 +34,18 @@
    },
    "devDependencies": {
       "@types/axios": "^0.14.0",
-      "@types/node": "^16.11.10",
+      "@types/bencode": "^2.0.2",
+      "@types/file-saver": "^2.0.5",
+      "@types/ioredis": "^5.0.0",
+      "@types/node": "^20.6.3",
       "@types/qs": "^6.9.7",
+      "@types/react": "^18.2.22",
+      "@types/react-dom": "^18.2.7",
       "@types/user-agents": "^1.0.2",
+      "@types/uuid": "^9.0.4",
       "autoprefixer": "^10.4.14",
+      "eslint": "^8.49.0",
+      "eslint-config-next": "^13.5.2",
       "postcss": "^8.4.21",
       "prettier": "^2.8.7",
       "prettier-plugin-organize-imports": "^3.2.2",
