--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
    "dependencies": {
       "@ctrl/video-filename-parser": "^4.12.0",
       "@octokit/rest": "^19.0.7",
-      "@pnpm/crypto.base32-hash": "^2.0.0",
       "@prisma/client": "^5.2.0",
       "axios": "^1.3.5",
-      "base32-encode": "^2.0.0",
+      "base32-decode": "^1.0.0",
       "bencode": "^4.0.0",
       "express": "^4.18.2",
       "file-saver": "^2.0.5",
