--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ MDBLIST_KEY=abc123
 
 DATABASE_URL="mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict"
 JACKETT="http://localhost:9117"
+PROWLARR="http://localhost:9696"
