--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ SCRAPE_API_PASSWORD=123456
 TMDB_KEY=abc123
 MDBLIST_KEY=abc123
 
-DATABASE_URL=mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict
+DATABASE_URL="mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict"
+JACKETT="http://localhost:9117"
+PROWLARR="http://localhost:9696"
