--- a/.env
+++ b/.env
@@ -8,4 +8,6 @@ MDBLIST_KEY=abc123
 
 DATABASE_URL="mysql://username:password@aws.connect.psdb.cloud/database?sslaccept=strict"
 JACKETT="http://localhost:9117"
+JACKETT_KEY=abc123
 PROWLARR="http://localhost:9696"
+PROWLARR_KEY=abc123
