--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "debrid-media-manager",
-   "version": "3.6.2",
+   "version": "3.6.3",
    "private": false,
    "scripts": {
       "dev": "next dev",
@@ -27,6 +27,7 @@
       "react-dom": "18.2.0",
       "react-hot-toast": "^2.4.0",
       "react-icons": "^4.8.0",
+      "sharp": "^0.32.6",
       "socks-proxy-agent": "^7.0.0",
       "user-agents": "^1.0.1444",
       "uuid": "^9.0.0"
