Add support for external search

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ JACKETT="http://localhost:9117"
 JACKETT_KEY=abc123
 PROWLARR="http://localhost:9696"
 PROWLARR_KEY=abc123
+
+EXTERNAL_SEARCH_API_HOSTNAME=
