--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "build": "next build",
       "start": "next start",
       "lint": "next lint",
-      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'"
+      "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md}'",
+      "test": "vitest"
    },
    "dependencies": {
       "@ctrl/video-filename-parser": "^5.0.0",
@@ -49,6 +50,7 @@
       "prisma": "^5.2.0",
       "tailwindcss": "^3.2.7",
       "ts-node": "10.7.0",
-      "typescript": "^5.2.2"
+      "typescript": "^5.2.2",
+      "vitest": "^0.34.6"
    }
 }
