--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "file-saver": "^2.0.5",
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
+      "pg": "^8.11.3",
       "qs": "^6.11.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
@@ -27,6 +28,8 @@
       "react-icons": "^4.8.0",
       "sharp": "^0.32.6",
       "socks-proxy-agent": "^7.0.0",
+      "sqlite": "^5.1.1",
+      "sqlite3": "^5.1.6",
       "sweetalert2": "^11.10.0",
       "user-agents": "^1.0.1444",
       "uuid": "^9.0.0"
@@ -36,9 +39,11 @@
       "@types/bencode": "^2.0.2",
       "@types/file-saver": "^2.0.5",
       "@types/node": "^20.6.3",
+      "@types/pg": "^8.10.9",
       "@types/qs": "^6.9.7",
       "@types/react": "^18.2.22",
       "@types/react-dom": "^18.2.7",
+      "@types/sqlite3": "^3.1.11",
       "@types/user-agents": "^1.0.2",
       "@types/uuid": "^9.0.4",
       "autoprefixer": "^10.4.14",
