--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "bencode": "^4.0.0",
       "express": "^4.18.2",
       "file-saver": "^2.0.5",
+      "idb": "^8.0.0",
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
       "pg": "^8.11.3",
