--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "axios": "^1.3.5",
       "bencode": "^4.0.0",
       "express": "^4.18.2",
+      "fastest-levenshtein": "^1.0.16",
       "file-saver": "^2.0.5",
       "idb": "^8.0.0",
       "lz-string": "^1.5.0",
