--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "fastest-levenshtein": "^1.0.16",
       "file-saver": "^2.0.5",
       "idb": "^8.0.0",
+      "lodash": "^4.17.21",
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
       "pg": "^8.11.3",
@@ -40,6 +41,7 @@
       "@types/axios": "^0.14.0",
       "@types/bencode": "^2.0.2",
       "@types/file-saver": "^2.0.5",
+      "@types/lodash": "^4.14.202",
       "@types/node": "^20.6.3",
       "@types/pg": "^8.10.9",
       "@types/qs": "^6.9.7",
