--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "socks-proxy-agent": "^7.0.0",
       "sqlite": "^5.1.1",
       "sqlite3": "^5.1.6",
+      "stremio-addon-sdk": "^1.6.10",
       "sweetalert2": "^11.10.0",
       "user-agents": "^1.0.1444",
       "uuid": "^9.0.0"
