Generate platform specific prisma files 3

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: 'lts/*'
 
       - run: npm ci
+      - run: npx prisma generate
       - run: npm run build
 
       - uses: actions/cache@v4
