--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "lodash": "^4.17.21",
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
+      "next-pwa": "^5.6.0",
       "pg": "^8.11.3",
       "qs": "^6.11.1",
       "react": "18.2.0",
