--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
       "next": "^13.4.19",
       "next-pwa": "^5.6.0",
       "pg": "^8.11.3",
+      "puppeteer": "^22.6.4",
+      "puppeteer-extra": "^3.3.6",
+      "puppeteer-extra-plugin-stealth": "^2.11.2",
       "qs": "^6.11.1",
       "react": "18.2.0",
       "react-dom": "18.2.0",
