--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "@octokit/rest": "^20.1.0",
       "@prisma/client": "^5.12.1",
       "axios": "^1.6.8",
+      "axios-rate-limit": "^1.4.0",
       "bencode": "^4.0.0",
       "express": "^4.18.2",
       "fastest-levenshtein": "^1.0.16",
