do not push just build and deploy

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docker image
+name: Build and Deploy Docker Image
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - '**.md'
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: [self-hosted, prod]
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,25 +21,23 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Read version from package.json
         id: version
         run: echo "version=$(node -p "require('./package.json').version")" >> "$GITHUB_OUTPUT"
 
-      - name: Build and push Docker image
+      - name: Build Docker image
         id: build-image
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          push: false  # Only build, don't push
           platforms: linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
           tags: |
             debridmediamanager/debrid-media-manager:latest
             debridmediamanager/debrid-media-manager:${{ steps.version.outputs.version }}
+
+      - name: Deploy to Docker Swarm
+        run: |
+          docker service update --image debridmediamanager/debrid-media-manager:latest --force dmm_web
