--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "lz-string": "^1.5.0",
       "next": "^13.4.19",
       "next-pwa": "^5.6.0",
+      "parse-torrent-title": "github:TorBox-App/parse-torrent-title",
       "pg": "^8.11.3",
       "qs": "^6.11.1",
       "react": "18.2.0",
