--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,25 +18,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Read version from package.json
-        id: version
-        run: echo "version=$(node -p "require('./package.json').version")" >> "$GITHUB_OUTPUT"
-
       - name: Build Docker image
-        id: build-image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: false  # Only build, don't push
-          platforms: linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: |
-            dmm-prod:latest
-            dmm-prod:${{ steps.version.outputs.version }}
+        run: |
+          docker build -t dmm-prod:latest --push .
 
       - name: Deploy to Docker Swarm
         run: |
