--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t dmm-prod:latest --push .
+          docker build -t dmm-prod:latest .
 
       - name: Deploy to Docker Swarm
         run: |
