--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "eslint-config-next": "^13.5.2",
     "husky": "^9.1.6",
     "postcss": "^8.4.21",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-sort-json": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.2.0",
     "tailwindcss": "^3.4.14",
     "ts-node": "10.7.0",
