Add connect page

--- a/.env
+++ b/.env
@@ -22,3 +22,15 @@ DMM_ORIGIN=http://localhost:1234
 DMMCAST_SALT=abc123
 
 REAL_DEBRID_CLIENT_ID=abc123
+
+PATREON_CLIENT_ID=abc123
+PATREON_CLIENT_SECRET=abc123
+PATREON_CREATOR_ACCESS_TOKEN=abc123
+PATREON_CREATOR_REFRESH_TOKEN=abc123
+
+GITHUB_CLIENT_ID=abc123
+GITHUB_CLIENT_SECRET=abc123
+
+DISCORD_CLIENT_ID=abc123
+DISCORD_PUBLIC_KEY=abc123
+DISCORD_CLIENT_SECRET=abc123
