feat: restore torrent availability count in progress toast
- Track available torrents during availability test process
- Display "(X found)" in progress toast when torrents are found
- Check availability after each torrent is processed
- Update both TV show and movie pages with the same functionality

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "debrid-media-manager",
   "version": "4.0.1",
   "private": false,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
